# scrollguard

./: .gitignore  .gitmodules  ANALYTICS_REFERENCE.md  CLAUDE.md  PROJECT_PLAN.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: llama_wrapper.h
app/src/main/cpp/jni/: content_classifier.cpp  llama_jni.cpp  model_loader.cpp
app/src/main/cpp/native/: native_bridge.cpp
app/src/main/java/com/scrollguard/app/: ScrollGuardApplication.kt
app/src/main/java/com/scrollguard/app/data/dao/: ContentDao.kt  PreferencesDao.kt  SessionDao.kt
app/src/main/java/com/scrollguard/app/data/database/: ScrollGuardDatabase.kt
app/src/main/java/com/scrollguard/app/data/model/: ContentAnalysis.kt  FeedbackType.kt  FilterSession.kt  UserPreferences.kt
app/src/main/java/com/scrollguard/app/data/provider/: ScrollGuardContentProvider.kt
app/src/main/java/com/scrollguard/app/data/repository/: ContentRepository.kt  PreferencesRepository.kt
app/src/main/java/com/scrollguard/app/receiver/: BootReceiver.kt
app/src/main/java/com/scrollguard/app/service/: ContentFilterService.kt  LLMInferenceService.kt
app/src/main/java/com/scrollguard/app/service/analytics/: AnalyticsManager.kt
app/src/main/java/com/scrollguard/app/service/llm/: LlamaInference.kt  LlamaInferenceManager.kt  ModelDownloadManager.kt
app/src/main/java/com/scrollguard/app/ui/activity/: LauncherActivity.kt  MainActivity.kt  OnboardingActivity.kt  SettingsActivity.kt
app/src/main/java/com/scrollguard/app/ui/adapter/: AppSelectionAdapter.kt
app/src/main/java/com/scrollguard/app/ui/dialog/: ContentFeedbackDialogFragment.kt  ModelDownloadDialogFragment.kt
app/src/main/java/com/scrollguard/app/ui/fragment/: OnboardingPageFragment.kt
app/src/main/java/com/scrollguard/app/ui/model/: AppInfo.kt
app/src/main/java/com/scrollguard/app/ui/overlay/: ContentOverlayManager.kt
app/src/main/java/com/scrollguard/app/ui/util/: AccessibilityHelper.kt  NotificationHelper.kt
app/src/main/java/com/scrollguard/app/util/: AccessibilityNodeHelper.kt  ErrorHandler.kt  SocialMediaDetector.kt
app/src/main/res/drawable/: ic_download.xml  ic_eye.xml  ic_eye_off.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_settings.xml  ic_shield.xml  ic_statistics.xml  tab_selector.xml
app/src/main/res/layout/: activity_main.xml  activity_onboarding.xml  activity_settings.xml  content_filter_overlay.xml  dialog_content_feedback.xml  dialog_model_download.xml  fragment_onboarding_page.xml  item_app_selection.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
